<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_sdk"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_sdk_description"/>
    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount_hint"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_now" />

    <Button
        android:id="@+id/move_to_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_setting" />

</LinearLayout>
