<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/settingsDescription" />

    <Button
        android:id="@+id/move_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_home_screen" />

    <Button
        android:id="@+id/move_to_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_info" />

</LinearLayout>