<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:background="#FBF8EF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/item_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/info"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_info_black_24dp" />

                <TextView
                    style="@style/menuItemText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/info"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/item_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/play_list"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_playlist_play_black_24dp" />

                <TextView
                    style="@style/menuItemText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/playlists"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/item_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/albums"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_album_black_24dp" />

                <TextView
                    style="@style/menuItemText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/albums"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/item_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/settings"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_settings_black_24dp" />

                <TextView
                    style="@style/menuItemText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/settings"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>